--- a/src/app/bookmark/bookmark.component.scss
+++ b/src/app/bookmark/bookmark.component.scss
@@ -16,6 +16,13 @@ form {
   color: #333333;
   margin-top: 1rem;
   text-align: center;
+
+}
+
+.label {
+  font-variant: small-caps;
+  font-weight: bold;
+  font-size: 1.1rem;
 }
 
 .car {
